src/test/resources/LO-2/InvalidPrograms/test_2.lo
// Incorrect arguments

int main() {
    int a, b;
    {
        a = xyz(1, 2, 3);
        return a;
    }
}

int xyz(int a, int b, int c, int d) {
    String result;
    {
        result = "result";
        return d;
    }
}